syntax = "proto3";

option csharp_namespace = "UserManagementGrpcServer";

package usermanagement;

// The user management service definition.
service UserManagement {
  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (UserReply);
  
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (UserReply);
  
  // Update an existing user
  rpc UpdateUser (UpdateUserRequest) returns (UserReply);
  
  // Delete a user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
  
  // List all users (server streaming)
  rpc ListUsers (ListUsersRequest) returns (stream User);
}

// User message definition
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Request message for creating a user
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

// Request message for getting a user by ID
message GetUserRequest {
  int32 id = 1;
}

// Request message for updating a user
message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

// Request message for deleting a user
message DeleteUserRequest {
  int32 id = 1;
}

// Request message for listing users
message ListUsersRequest {
  int32 page_size = 1;
  string filter = 2;
}

// Response message for user operations
message UserReply {
  User user = 1;
  string message = 2;
  bool success = 3;
}

// Response message for delete operation
message DeleteUserReply {
  string message = 1;
  bool success = 2;
}